fixed collapsing margins on merch preview/top of homepage

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,6 +52,10 @@ table {
   box-sizing: border-box;
 }
 
+.HomePage {
+  padding: 10% 0 0;
+}
+
 /* HEADER */
 .Header1 {
   position: fixed;
@@ -59,7 +63,6 @@ table {
   width: 100%;
   padding: 2% 0;
   background-color: rgb(0,7,20);
-  margin-top: -10%;
 }
 
 .header-wrapper {
@@ -117,7 +120,7 @@ h1 {
 
 /* MERCH PREVIEW */
 .MerchPreview {
-  margin: 10% auto 0;
+  margin: 0 auto;
   padding: 1% 0 0;
   background-color: #d3d3d3;
   width: 80%;
@@ -564,6 +567,16 @@ h1 {
     height: 100vh;
     width: 100vw;
     position: fixed;
+  }
+
+  /* MERCH PREVIEW */
+  .MerchPreview {
+    width: 90%;
+    margin-top: 13vh;
+  }
+
+  .merch-title {
+    content: "merch";
   }
 
   /* FOOTER */
